[css] fix profile tab on mobile

--- a/django-env/static/css/bootstrap/bootstrap.paper.css
+++ b/django-env/static/css/bootstrap/bootstrap.paper.css
@@ -3915,8 +3915,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     float: none;
 }
 .nav-tabs.nav-justified>li>a {
-    text-align: center;
     margin-bottom: 5px;
+}
+@media (min-width: 768px) {
+    .nav-tabs.nav-justified>li>a {
+        text-align: center;
+    }
 }
 .nav-tabs.nav-justified>.dropdown .dropdown-menu {
     top: auto;
@@ -3980,8 +3984,12 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
     float: none;
 }
 .nav-justified>li>a {
-    text-align: center;
     margin-bottom: 5px;
+}
+@media (min-width: 768px) {
+    .nav-justified>li>a {
+        text-align: center;
+    }
 }
 .nav-justified>.dropdown .dropdown-menu {
     top: auto;
